Ensured no transient scrollbars appear when collapsing editor sections.

--- a/src/scss/hightouch/components/collapsible-header-section.scss
+++ b/src/scss/hightouch/components/collapsible-header-section.scss
@@ -49,4 +49,8 @@
       color: var(--t5e-color-text-onDefault-default);
     }
   }
+
+  .editor:has(.user-select-text) {
+    overflow: hidden;
+  }
 }
